--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PackYourBag</string>
+    <string name="app_name">TripMate</string>
     <string name="this_is_just_for_test">This is just for test</string>
     <string name="pack_your_bag">Pack Your Bag</string>
     <string name="delete">Delete</string>
